Added events and state and onboarding status